--- a/site/_posts/0000-01-01-ccv-swt.markdown
+++ b/site/_posts/0000-01-01-ccv-swt.markdown
@@ -9,46 +9,52 @@ categories:
 - lib
 ---
 
-ccv_swt
--------
+ccv\_swt
+--------
 
-	void ccv_swt(ccv_dense_matrix_t* a, ccv_dense_matrix_t** b, int type, ccv_swt_param_t params)
+	void ccv_swt(ccv_dense_matrix_t *a, ccv_dense_matrix_t **b, int type, ccv_swt_param_t params)
 
 Compute the Stroke-Width-Transform image.
 
- * **a**: the input matrix.
- * **b**: the output matrix.
- * **type**: the type of the output matrix, if 0, ccv will default to CCV\_32S \| CCV\_C1.
- * **params**: a **ccv\_swt\_param\_t** structure that defines various aspect of the SWT function.
+ * **a**: The input matrix.
+ * **b**: The output matrix.
+ * **type**: The type of the output matrix, if 0, ccv will default to CCV\_32S \| CCV\_C1.
+ * **params**: A **ccv\_swt\_param\_t** structure that defines various aspect of the SWT function.
 
-ccv_swt_param_t
----------------
+ccv\_swt\_param\_t
+------------------
 
- * **up2x**: upscale the image for better accuracy.
+ * **aspect\_ratio**: The maximum aspect ratio for a letter.
+ * **breakdown**: Break textline into words If breakdown text line into words.
+ * **breakdown\_ratio**: Apply [OSTU](/lib/ccv-classic) and if inter-class variance above the threshold, it will be break down into words.
  * **direction**: SWT direction. (black to white or white to black).
- * **size**: parameters for [Canny edge detector](/lib/ccv-classic).
- * **low_thresh**: parameters for [Canny edge detector](/lib/ccv-classic).
- * **high_thresh**: parameters for [Canny edge detector](/lib/ccv-classic).
- * **max_height**: the maximum height for a letter.
- * **min_height**: the minimum height for a letter.
- * **aspect_ratio**: the maximum aspect ratio for a letter.
- * **variance_ratio**: the inner-class variance when grouping letters.
- * **thickness_ratio**: the allowable thickness variance when grouping letters.
- * **height_ratio**: the allowable height variance when grouping letters.
- * **intensity_thresh**: the allowable intensity variance when grouping letters.
- * **distance_ratio**: the allowable distance variance when grouping letters.
- * **intersect_ratio**: the allowable intersect variance when grouping letters.
- * **elongate_ratio**: the allowable elongate variance when grouping letters.
- * **letter_thresh**: the allowable letter threshold.
- * **breakdown**: if breakdown text line into words.
- * **breakdown_ratio**: apply [OSTU](/lib/ccv-classic) and if inter-class variance above the threshold, it will be break down into words.
+ * **distance\_ratio**: The allowable distance variance when grouping letters.
+ * **elongate\_ratio**: The allowable elongate variance when grouping letters.
+ * **height\_ratio**: The allowable height variance when grouping letters.
+ * **high\_thresh**: Parameters for [Canny edge detector](/lib/ccv-classic).
+ * **intensity\_thresh**: The allowable intensity variance when grouping letters.
+ * **intersect\_ratio**: The allowable intersect variance when grouping letters.
+ * **interval**: Intervals for scale invariant option.
+ * **letter\_thresh**: The allowable letter threshold.
+ * **low\_thresh**: Parameters for [Canny edge detector](/lib/ccv-classic).
+ * **max\_height**: Geometry filtering parameters The maximum height for a letter.
+ * **min\_area**: The minimum occupied area for a letter.
+ * **min\_height**: The minimum height for a letter.
+ * **min\_neighbors**: Minimal neighbors to make a detection valid, this is for scale-invariant version.
+ * **same\_word\_thresh**: Overlapping more than 0.1 of the bigger one (0), and 0.9 of the smaller one (1)
+ * **scale\_invariant**: Enable scale invariant swt (to scale to different sizes and then combine the results)
+ * **size**: Canny parameters Parameters for [Canny edge detector](/lib/ccv-classic).
+ * **std\_ratio**: The inner-class standard derivation when grouping letters.
+ * **thickness\_ratio**: Grouping parameters The allowable thickness variance when grouping letters.
 
-ccv_swt_detect_words
---------------------
+ccv\_swt\_detect\_words
+-----------------------
 
-	ccv_array_t* ccv_swt_detect_words(ccv_dense_matrix_t* a, ccv_swt_param_t params)
+	ccv_swt_detect_words(ccv_dense_matrix_t *a, ccv_swt_param_t params)
 
 Return array of regions that are potentially text area.
 
- * **a**: the input matrix.
- * **params**: a **ccv\_swt\_param\_t** structure that defines various aspect of the SWT function.
+ * **a**: The input matrix.
+ * **params**: A **ccv\_swt\_param\_t** structure that defines various aspect of the SWT function.
+
+**return**: A **ccv\_array\_t** of **ccv\_comp\_t** with detection results.
